[gd_scene load_steps=8 format=2]

[ext_resource path="res://source/Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/UI/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://source/Scenes/particle.tscn" type="PackedScene" id=4]
[ext_resource path="res://assests/sound/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://assests/sound/gameover.wav" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 4, 2, 0, 0, 0, 0, 477, 3, 0, 0, 0, 0, 476, 715, 0, 0, 0, 0, 4, 709, 0, 0, 0, 0, 4, 2 )
}

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.219608, 0.372549, 0.380392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="particle" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 97, 387 )
collision_mask = 0

[node name="MobTimer" type="Timer" parent="."]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="PlayerPosition" type="Position2D" parent="."]
position = Vector2( 240, 360 )

[node name="MobPath" type="Path2D" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 4, 2 )
rotation = 0.00211414

[node name="container" type="Node" parent="."]

[node name="game_over" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="resized" from="ColorRect" to="." method="_on_ColorRect_resized"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]

[editable path="particle"]
